--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -84,7 +84,7 @@ The generated strategies were sometimes really long and unreadable. An example o
 \State $ if(find\_max(2)*page\_access\_count\_min()<time)$
 \State $\{if(num1<=frame==time)\{\}\}else\{\} set\_accessed(num1,frame);$ \State $if(frame)
 \{write(1,frame,page\_access\_count\_min());\}$
-\State $else\{set\_accessed(num3,find_max(2) * page\_access\_count\_min()<time>=frame);num1=frame==time;\}$
+\State $else\{set\_accessed(num3,find\_max(2) * page\_access\_count\_min()<time>=frame);num1=frame==time;\}$
 \end{algorithmic}
 
 \medskip
