--- a/paper/Introduction_Body.tex
+++ b/paper/Introduction_Body.tex
@@ -8,6 +8,6 @@ Genetic programming is a branch of evolutionary computing whose primary concern 
 	\item Most of these variations are hereditary.
 \end{enumerate}
 
-One of the main tools in compiler design are context-free grammars. They provide an elegant, formal way of describing the structural rules of computer programs, and each valid computer program written in some arbitrary language satisfies the rules of that language's grammar. Grammar based approaches in the field of genetic programming have enjoyed much popularity \citep{neill2003grammaticalevolution}, and the most popular and used technique is the grammatical evolution.
+One of the main tools in compiler design are context-free grammars. They provide an elegant, formal way of describing the structural rules of computer programs, and each valid computer program written in some arbitrary language satisfies the rules of that language's grammar. Grammar-based approaches in the field of genetic programming have enjoyed much popularity \citep{neill2003grammaticalevolution}, and the most popular and used technique is the grammatical evolution.
 
 The topic of this thesis is using grammatical evolution in solving a popular benchmarking problem in the field of genetic programming, which is evolving cache replacement policies. The rest of this thesis is organised as follows: chapter 2 covers the theoretical background involved in solving this problem, chapter 3 explains the problem of cache replacement policies and how it can be solved using grammatical evolution, chapter 4 covers the experiment design and the results analysis, and chapter 5 covers a conclusion of the thesis. Finally, in the appendix A, the software system constructed for the experiments covered in chapter 4 is described in detail.
