replaced bar charts with box plots

--- a/paper/Experimental_Settings.tex
+++ b/paper/Experimental_Settings.tex
@@ -19,4 +19,4 @@ Since the genetic algorithm is inherently stochastic, each experiment will be re
 
 Once all the parameters have been optimized, the algorithm will be run using these parameters on different cache sizes, and the generated strategies will be compared to the classical heuristic strategies for cache management.
 
-All the diagrams included in this chapter were generated using the \citep{box_plots}.
+All the box plots included in the chapter 4.2 were generated using \citep{box}, and all the diagrams included in the chapter 4.3 were generated using \citep{box_plots}.
