--- a/paper/Parameter_Optimization.tex
+++ b/paper/Parameter_Optimization.tex
@@ -10,7 +10,7 @@ The median fitness in both of these runs was 1907, so the average fitness was us
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{bar_plot_01.png}
+	\includegraphics[scale=0.4]{boxplot_01.pdf}
 	\caption{Results of optimizing the selection operator}
 \end{figure}
 
@@ -25,7 +25,7 @@ All of these runs had the median fitness of 18999, so the average fitness was us
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{bar_plot_02.png}
+	\includegraphics[scale=0.4]{boxplot_02.pdf}
 	\caption{Results of optimizing the mutation rate}
 \end{figure}
 
@@ -36,7 +36,7 @@ The third parameter that was optimized was the population size. The values that 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{bar_plot_03.png}
+	\includegraphics[scale=0.4]{boxplot_03.pdf}
 	\caption{Results of optimizing the population size}
 \end{figure}
 
@@ -47,7 +47,7 @@ The fourth parameter that was optimized was the codon count. The values that wer
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{bar_plot_04.png}
+	\includegraphics[scale=0.4]{boxplot_04.pdf}
 	\caption{Results of optimizing the population size}
 \end{figure}
 
@@ -58,7 +58,7 @@ The fifth and final parameter that was optimized was the maximum number of wrapp
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{bar_plot_05.png}
+	\includegraphics[scale=0.4]{boxplot_05.pdf}
 	\caption{Results of optimizing the maximum number of wrappings}
 \end{figure}
 
