--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -76,3 +76,9 @@
 	howpublished = {\url{https://www.libreoffice.org/discover/calc/}},
 	note = {Diagrams generated: 2022-06-07}
 }
+
+@Misc{box,
+	title = {Box{P}lot{R}: a web-tool for generation of box plots},
+	howpublished = {\url{http://shiny.chemgrid.org/boxplotr/}},
+	note = {Diagrams generated: 2022-06-10}
+}
