--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -6,6 +6,7 @@
 \usepackage{pdfpages}
 \usepackage{graphicx} 
 \usepackage{hyperref}
+\usepackage{svg}
 \graphicspath{ {./images/} }
 
 \begin{document}
